--- a/help/help.adoc
+++ b/help/help.adoc
@@ -370,7 +370,9 @@ NOTE: If the Git commit ID cannot be found or if the procedure or steps cannot f
 
 === 4.3.2
 
-* Process reservations under project. (Note that previously exported DSLs will need to be re-exported for import to succeed)
+* Process reservations under project. 
++
+NOTE: Previously exported DSLs must be re-exported for import to succeed.
 
 === 4.3.1
 
